--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ deploy:
   provider: heroku
   api_key:
     secure: 4cecee06-87ac-4f60-bd9f-d24a691f4160
-  app: still-scrubland-5274
+  app: murmuring-anchorage-7264
   on:
     repo: danielfs/node-app
