--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: node_js
 node_js:
   - "0.12"
-before_install:
-  - npm install -g npm@~1.4.18
-before_script:
-  - npm install -g istanbul
-  - npm install coveralls
-script:
-  - istanbul cover ./node_modules/.bin/grunt --report lcovonly && istanbul report text && ( cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js || true ) && rm -rf coverage
+after_success:
+  - npm run coveralls
 deploy:
   provider: heroku
   api_key: 
