--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
   - "0.12"
+script:
+  - npm install coveralls --save-dev
 after_success:
   - npm run coveralls
+  
 deploy:
   provider: heroku
   api_key: 
