--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha",
+    "test": "grunt && npm run gt",
+    "gt": "node ./node_modules/gt qunit-promises.js test/node-tests.js --output",
+    "coveralls": "cat cover/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "engines": {
     "node": "0.12.2"
