--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: node_js
 node_js:
   - "0.12"
-script: npm run-script test-on-travis
-after_success:
-  - npm run coveralls
-  
+before_install:
+  - npm install -g npm@~1.4.18
+before_script:
+  - npm install -g istanbul
+  - npm install coveralls
+  - npm install node-red
+#- npm install git+https://github.com/node-red/node-red.git
+  - export NODE_RED_HOME=`pwd`/node_modules/node-red
+  - (cd $NODE_RED_HOME ; npm install nock@~0.48.0 )
+script:
+  - istanbul cover ./node_modules/.bin/grunt --report lcovonly && istanbul report text && ( cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js || true ) && rm -rf coverage
 deploy:
   provider: heroku
   api_key: 
