--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ before_script:
   - npm install -g istanbul
 script:
   - grunt
-  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 deploy:
   provider: heroku
   api_key: 
@@ -17,3 +16,5 @@ deploy:
   app: codeshipheroku
   on:
     repo: petrovick/node-app
+after_success:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
