--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ deploy:
   app: codeshipheroku
   on:
     repo: petrovick/node-app
-after_success:
+after_script:
   - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
