--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ before_script:
   - npm install -g mocha
   - npm install -g istanbul
 script:
-  - grunt
-  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+  ./run_build.sh
 deploy:
   provider: heroku
   api_key: 
