--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "chai": "^2.3.0",
     "coveralls": "^2.11.2",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jsbeautifier": "^0.2.10",
+//    "grunt-contrib-jshint": "^0.11.2",
+//    "grunt-contrib-watch": "^0.6.1",
+//    "grunt-jsbeautifier": "^0.2.10",
     "grunt-mocha-test": "^0.12.7",
     "grunt-shell": "^1.1.2",
     "mocha": "^2.2.5",
